--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
         <div class="video-container">
             <video autoplay muted loop playsinline class="background-video">
-                <source src="/img/myvideo.mp4" type="video/mp4">
+                <source src="img/myvideo.mp4" type="video/mp4">
                 <!-- Alternatif bir format gerekiyorsa aşağıya ekleyebilirsiniz -->
                 <!-- <source src="your-video-file.webm" type="video/webm"> -->
                 Your browser does not support the video tag.
@@ -450,10 +450,10 @@
         <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
             <div class="testimonial-item rounded p-4">
                 <div class="d-flex align-items-center mb-4">
-                    <img class="img-fluid bg-white rounded flex-shrink-0 p-1" src="img/mert.jpeg" style="width: 85px; height: 85px;">
+                    <img class="img-fluid bg-white rounded flex-shrink-0 p-1" src="img/goktan.jpeg" style="width: 85px; height: 85px;">
                     <div class="ms-4">
-                        <h5 class="mb-1">Mert Vurgun</h5>
-                        <p class="mb-1">Senior Software Engineer</p>
+                        <h5 class="mb-1">Göktan Güngör</h5>
+                        <p class="mb-1">Co-founder Teknik Koordinatör</p>
                         <div>
                             <small class="fa fa-star text-warning"></small>
                             <small class="fa fa-star text-warning"></small>
@@ -468,10 +468,10 @@
 
             <div class="testimonial-item rounded p-4">
                 <div class="d-flex align-items-center mb-4">
-                    <img class="img-fluid bg-white rounded flex-shrink-0 p-1" src="img/goktan.jpeg" style="width: 85px; height: 85px;">
+                    <img class="img-fluid bg-white rounded flex-shrink-0 p-1" src="img/mert.jpeg" style="width: 85px; height: 85px;">
                     <div class="ms-4">
-                        <h5 class="mb-1">Göktan Güngör</h5>
-                        <p class="mb-1">Co-founder Teknik Koordinatör</p>
+                        <h5 class="mb-1">Mert Vurgun</h5>
+                        <p class="mb-1"> Senior Software Engineer </p>
                         <div>
                             <small class="fa fa-star text-warning"></small>
                             <small class="fa fa-star text-warning"></small>
